fix some visual comflict between home button, menu and content on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -650,7 +650,14 @@ a:active {
         width: auto;
         height: 100%;
     }
-    
+    #home {
+        left: 50%;
+        transform:translate(-50%, 0);
+    }
+    #dropdown{
+        padding-top: 50px;
+    }
+
     #artist-detail,
     #exhibition-detail,
     #exhibition-list,
@@ -673,10 +680,12 @@ a:active {
         -ms-transform: initial;
         transform: initial;
         width: initial;
-        padding: 1em 0 0 0;
+        /*padding: 1em 0 0 0;*/
+        padding: 6em 0 0 0;
     }
     #cv {
         margin-top: 0;
+        padding-top:50px;
     }
 
     .col {
